fix: improve tex4ht html output

--- a/lifeguide.tex
+++ b/lifeguide.tex
@@ -6,6 +6,9 @@
 % https://github.com/transpect/docx2tex 
 %  
 \documentclass{scrbook} 
+\title{本科升学路径指南}
+\author{真知棒（吉林大学生命科学学院）}
+\date{}
 % region 模块A：页面与引擎基础设置
 \usepackage[a4paper,left=2.6cm,right=2.6cm,top=1.4cm,bottom=2.6cm,includehead]{geometry}
 \usepackage[T1]{fontenc} 
