修复排版，增加侧边导航栏

--- a/lifeguide.tex
+++ b/lifeguide.tex
@@ -1259,7 +1259,8 @@
 
 \subsection{\label{ref-040}研究所系列}
 
-\subsubsection{中科院生物物理研究所(IBP,北京)}
+\begin{enumerate}
+\item \textbf{中科院生物物理研究所(IBP,北京)}
 
 \textbf{整体印象}
 \begin{itemize}
@@ -1294,7 +1295,7 @@
 \begin{itemize}
 \item 有经验者提到：感染与免疫重点实验室部分老师很强,但也听闻过性别偏见等负面评价(多为口碑/平台讨论),建议自行多渠道核实
 \end{itemize}
-\subsubsection{分子细胞科学卓越创新中心(上海生化所/生化与细胞所,SIBCB)}
+\item \textbf{分子细胞科学卓越创新中心(上海生化所/生化与细胞所,SIBCB)}
 
 \textbf{整体印象}
 \begin{itemize}
@@ -1337,7 +1338,7 @@
 \includegraphics[width=\linewidth]{media/image11.jpg}
 \end{center}
 
-\subsubsection{3. 中国科学院遗传与发育生物学研究所}
+\item \textbf{中国科学院遗传与发育生物学研究所}
 
 \textbf{国家重点实验室}
 \begin{itemize}
@@ -1345,7 +1346,7 @@
 \item 植物细胞与染色体工程国家重点实验室
 \item 分子发育生物学国家重点实验室
 \end{itemize}
-\subsubsection{4. 中科院深圳先进技术研究院｜合成生物学研究所}
+\item \textbf{中科院深圳先进技术研究院｜合成生物学研究所}
 
 \textbf{夏令营整体印象}
 \begin{itemize}
@@ -1362,7 +1363,7 @@
 
 \item 总体氛围被描述为``老师很 nice,值得一看''
 \end{itemize}
-\subsubsection{5. 生物与化学交叉研究中心(交叉中心)}
+\item \textbf{生物与化学交叉研究中心(交叉中心)}
 
 \textbf{方向与资源}
 \begin{itemize}
@@ -1398,7 +1399,7 @@
 \item 研究形态：小分子化药；2\textendash{}4 楼生物,5 楼化学
 \item 地理位置：上海浦东新区,较偏；上科大旁；园区内有上海脑科学与类脑研究中心
 \end{itemize}
-\subsubsection{6. 中科院微生物研究所(北京)}
+\item \textbf{中科院微生物研究所(北京)}
 
 \textbf{整体印象}
 \begin{itemize}
@@ -1418,14 +1419,14 @@
 \includegraphics[width=\linewidth]{media/image13.png}
 \end{center}
 
-\subsubsection{中科院青岛生物能源与过程研究所}
+\item \textbf{中科院青岛生物能源与过程研究所}
 
 \begin{center}
 \includegraphics[width=\linewidth]{media/image14.jpg}\par\medskip
 \includegraphics[width=\linewidth]{media/image15.jpg}
 \end{center}
 
-\subsubsection{天津工业生物技术研究所}
+\item \textbf{天津工业生物技术研究所}
 
 \textbf{简介：}
 
@@ -1441,7 +1442,10 @@
 \end{enumerate}
 \textbf{著名导师}
 
+
 \noindent\includegraphics[width=\linewidth]{media/image16.png}
+
+\end{enumerate}
 
 \subsection{\label{ref-041}中国高校系列}
 
