fix: update LaTeX document formatting and improve HTML post-processing

--- a/lifeguide.tex
+++ b/lifeguide.tex
@@ -335,7 +335,7 @@
 \end{itemize}
 \subsubsection{外校去向情况(2025 届参考)}
 
-\textbf{2025 届毕业生主要保外去向分布：}
+\blocktitle{2025 届毕业生主要保外去向分布：}
 \begin{itemize}
 \item \textbf{高校方向}：北京大学、中国科技大学、上海交通大学、中国科学院大学、南开大学、华中科技大学、复旦大学、北京理工大学
 \item \textbf{科研院所方向}：中科院生物物理所、北京生命科学研究所、上海生化所、上海神经所、上海药物所、武汉病毒所、青岛过程所、脑智卓越创新中心、类脑研究所、国科大杭州高等研究院、临港实验室等
@@ -416,7 +416,8 @@
 
 \subsection{\label{ref-015}国优计划保研(专项计划推免)}
 
-\textbf{国优计划保研：}理工科,未来打算走教育赛道
+\blocktitle{国优计划保研}
+理工科,未来打算走教育赛道
 
 \subsubsection{校内要求}
 
@@ -839,8 +840,8 @@
 \end{enumerate}
 \subsection{\label{ref-026}项目与文件管理：避免保研材料失控}
 
-项目管理的核心目标只有一个：\par
-\textbf{在多院校、多材料、多截止日期的情况下,避免混乱与低级错误。}
+项目管理的核心目标只有一个：
+\blocktitle{在多院校、多材料、多截止日期的情况下,避免混乱与低级错误。}
 
 \subsubsection{时间管理：为不确定性预留缓冲}
 
@@ -940,7 +941,7 @@
 \item 识别它的来源
 \item 避免在情绪高涨时做出不可逆决定
 \end{itemize}
-\textbf{在焦虑存在的情况下继续推进事务,本身就是一种能力。}
+\blocktitle{在焦虑存在的情况下继续推进事务,本身就是一种能力。}
 
 \subsubsection{关于焦虑缓解：本指南的边界说明}
 
@@ -991,8 +992,9 @@
 
 \subsubsection{自我介绍：高度精炼的 1\textendash{}3 分钟}
 
-\textbf{时间控制}：1\textendash{}3 分钟,结构固定\par
-\textbf{推荐结构}：\par
+\blocktitle{时间控制}
+1\textendash{}3 分钟,结构固定
+\blocktitle{推荐结构}
 背景 ${\rightarrow}$ 成绩 / 科研经历 ${\rightarrow}$ 兴趣方向
 
 注意事项：
@@ -1037,7 +1039,8 @@
 \end{enumerate}
 介绍项目时应\textbf{突出你学到了什么、能为课题组做什么}。除非成果非常突出,否则不必沉迷于技术细节。
 
-\textbf{反例提醒}：给纯生信方向的导师,长时间讲述蛋白表达纯化的操作细节,往往是减分项。
+\blocktitle{反例提醒}
+给纯生信方向的导师,长时间讲述蛋白表达纯化的操作细节,往往是减分项。
 
 \subsubsection{面试可能考察的能力维度}
 
@@ -1214,8 +1217,8 @@
 \end{itemize}
 因此,将学业长期放在优先级首位,是一种\textbf{风险最低的策略}。
 
-但同样需要承认的是：\par
-\textbf{不选择卷绩点,并不等于没有出路。}
+但同样需要承认的是：
+\blocktitle{不选择卷绩点,并不等于没有出路。}
 
 前提是：
 \begin{itemize}
@@ -1418,8 +1421,8 @@
 \begin{itemize}
 \item 部分专硕同学转博路径可能存在不确定性,需要提前问清政策与名额逻辑
 \end{itemize}
+\blocktitle{研究体系}
 \begin{center}
-\textbf{研究体系}\par
 \includegraphics[width=\linewidth]{media/image13.png}
 \end{center}
 
@@ -1633,18 +1636,18 @@
 \end{itemize}
 \subsubsection{北京大学｜基础医学院(医学部)}
 
-\textbf{硬件与生活}
+\blocktitle{硬件与生活}
 \begin{itemize}
 \item 医学部与本部不在同一地点,但距离不算远；硬件条件总体可以,存在新实验楼
 \item 生活配套尚可(图书馆、超市、食堂等)；宿舍体感为 4 人间
 \end{itemize}
-\textbf{招生逻辑}
+\blocktitle{招生逻辑}
 \begin{itemize}
 \item ``老师点头制''色彩较强：私下面试、导师认可很关键,建议尽早联系导师
 \item 名额竞争压力大：部分名额可能被本校本硕博贯通学生占用,需提前问清
 \item 优势：北大体系背书；劣势：科研条件与资源可能不如北大本部或研究所平台(经验者体感)
 \end{itemize}
-\textbf{关于优营效力的提醒}
+\blocktitle{关于优营效力的提醒}
 \begin{itemize}
 \item 某年``优营效力有限'',更多是提供联系导师的平台,仍需后续预推免流程
 \item 不同系面试内容与时间不同,需要逐项核对
@@ -1657,7 +1660,7 @@
 \item 建议：提前确认是否需要纸质版,预留邮寄/递交时间,不要卡点
 \item 北大未来技术学院直博(有专博),从报名开始需要和老师小导沟通,导师决定权很大,北大本校人的保底。
 \end{itemize}
-\textbf{可选择方向}
+\blocktitle{可选择方向}
 
 \begin{center}
 \includegraphics[width=\linewidth]{media/image21.png}
@@ -1697,14 +1700,14 @@
 \item \textbf{方向}：利用盐单胞菌进行聚羟基脂肪酸酯(PHA)的工业生产与应用
 \item \textbf{产业化信息}：孵化企业(蓝晶微生物、微构工厂等),融资规模被描述为``超百亿元''
 \end{itemize}
-\textbf{优点}
+\blocktitle{优点}
 \begin{itemize}
 \item 成果转化前景好(``很挣钱'')
 \item 导师是国内合成生物学大牛(杰青、973 首席)
 \item 若转行,清华平台/牌子硬
 \item 实验室不缺钱
 \end{itemize}
-\textbf{缺点}
+\blocktitle{缺点}
 \begin{itemize}
 \item 发表文章相对冷门、产出一般
 \item 导师年龄大
@@ -1750,13 +1753,13 @@
 \end{enumerate}
 
 \end{itemize}
-\textbf{优点}
+\blocktitle{优点}
 \begin{itemize}
 \item 文章质量高、产出好(博士人手 1\textendash{}2 篇 CNS；硕士 Nature 大子刊)
 \item 导师背景强(杰青、973 负责人、21 年院士提名),年龄小(42 岁)
 \item 实验室不缺钱
 \end{itemize}
-\textbf{缺点}
+\blocktitle{缺点}
 \begin{itemize}
 \item 工作强度极大(``8117,据说'')
 \item 实验室人数多(30+)
