fix: update LaTeX guide formatting and improve table of contents styles

--- a/lifeguide.tex
+++ b/lifeguide.tex
@@ -267,7 +267,7 @@
 
 保研整体流程可概括为三个阶段：
 
-\textbf{准备 ${\rightarrow}$ 推荐 ${\rightarrow}$ 录取}
+\blocktitle{准备 ${\rightarrow}$ 推荐 ${\rightarrow}$ 录取}
 \begin{itemize}
 \item \textbf{准备阶段(大一\textemdash{}大三)}\newline
 核心任务：学业成绩积累(绩点)、科研与综合素质准备
@@ -281,7 +281,7 @@
 \subsubsection{推荐资格的核心目标}
 
 本阶段的唯一目标是：\par
-\textbf{在学院综合排名中进入推免范围,获得推免资格。}
+\blocktitle{在学院综合排名中进入推免范围,获得推免资格。}
 
 在此过程中,需要重点关注三类信息：
 \begin{itemize}
@@ -314,7 +314,8 @@
 \end{tabularx}
 \endgroup
 \end{table}
-注：该表用于展示``结构比例'',而非鼓励简单横向比较。
+\blocktitle{注}
+该表用于展示``结构比例'',而非鼓励简单横向比较。
 
 \subsection{\label{ref-010}录取阶段：获取目标院校接收资格}
 
@@ -335,16 +336,17 @@
 \end{itemize}
 \subsubsection{外校去向情况(2025 届参考)}
 
-\blocktitle{2025 届毕业生主要保外去向分布：}
+\blocktitle{2025 届毕业生主要保外去向分布}
 \begin{itemize}
 \item \textbf{高校方向}：北京大学、中国科技大学、上海交通大学、中国科学院大学、南开大学、华中科技大学、复旦大学、北京理工大学
 \item \textbf{科研院所方向}：中科院生物物理所、北京生命科学研究所、上海生化所、上海神经所、上海药物所、武汉病毒所、青岛过程所、脑智卓越创新中心、类脑研究所、国科大杭州高等研究院、临港实验室等
 \end{itemize}
-注：可以选择的方向很多,学长学姐仅仅是提供一个启示 
+\blocktitle{注}
+可以选择的方向很多,学长学姐仅仅是提供一个启示。
 
 \subsubsection{本校录取选择情况}
 
-2025届毕业保研生选择本校情况
+\blocktitle{2025 届毕业保研生选择本校情况}
 
 \begin{table}[H]
 \begin{tabularx}{\textwidth}{|p{\dimexpr 0.286\linewidth-2\tabcolsep-2\arrayrulewidth}|p{\dimexpr 0.181\linewidth-2\tabcolsep-\arrayrulewidth}|p{\dimexpr 0.205\linewidth-2\tabcolsep-\arrayrulewidth}|p{\dimexpr 0.161\linewidth-2\tabcolsep-\arrayrulewidth}|p{\dimexpr 0.167\linewidth-2\tabcolsep-\arrayrulewidth}|} \hline 
@@ -353,7 +355,7 @@
 \centering\arraybackslash{}6 & \centering\arraybackslash{}5 & \centering\arraybackslash{}1 & \centering\arraybackslash{}6 & \centering\arraybackslash{}18\\\hline 
 \end{tabularx}
 \end{table}
-2026届直博生拨付名额与实际接受名额
+\blocktitle{2026 届直博生拨付名额与实际接受名额}
 
 \noindent\includegraphics[width=\linewidth]{media/image3.png}
 
@@ -363,9 +365,8 @@
 
 \noindent\includegraphics[width=\linewidth]{media/image4.png}
 
-\begin{center}
-\textbf{不算加分的纯成绩排名是最重要的。这能为你争取到参加夏令营资格。等到了大三下后,有些同学会取得很多成果,使得纯成绩再加上素质加分项后,排名会波动,多数会有约0.1-0.3范围的浮动,保研边缘同学需要注意。}
-\end{center}
+\blocktitle{重要提醒}
+不算加分的纯成绩排名是最重要的。这能为你争取到参加夏令营资格。等到了大三下后,有些同学会取得很多成果,使得纯成绩再加上素质加分项后,排名会波动,多数会有约0.1-0.3范围的浮动,保研边缘同学需要注意。
 \subsubsection{流程总概括}
 
 \noindent\includegraphics[width=\linewidth]{media/image5.png}
@@ -408,7 +409,8 @@
 
 \subsection{\label{ref-014}常规保研}
 
-\textbf{常规保研}是最常见的保研方式,名额最多,以成绩为主要依据,
+\blocktitle{常规保研}
+是最常见的保研方式,名额最多,以成绩为主要依据。
 
 在本校可以考虑生科院,也可以考虑其它院或研究所,例如医学院,动科学院,药学院等。
 
@@ -597,34 +599,30 @@
 
 \subsubsection{轮转制}
 
-\begin{enumerate}
-\item \textbf{优点}
+\blocktitle{优点}
 \begin{itemize}
 \item 可通过真实参与组会与日常工作,降低信息不对称,更好判断导师与课题组是否匹配。
 \item 不必一开始就``押注''某一导师,选择空间更灵活。
 \end{itemize}
-\item \textbf{缺点}
+\blocktitle{缺点}
 \begin{itemize}
 \item 好导师名额可能被提前占用,轮转结束未必能进理想课题组。
 \item 竞争强、内卷明显,需要在同批学生中比拼。
 \item 结果不确定性较高,容易带来额外焦虑与时间成本。
 \end{itemize}
-\end{enumerate}
 \subsubsection{非轮转制(提前定导 / 直接进组)}
 
-\begin{enumerate}
-\item \textbf{优点}
+\blocktitle{优点}
 \begin{itemize}
 \item 确定性强,可提前锁定导师与名额,减少后续变数。
 \item 避免轮转阶段的集中竞争与内卷风险。
 \item 策略更保守,适合希望降低不确定性的人。
 \end{itemize}
-\item \textbf{缺点}
+\blocktitle{缺点}
 \begin{itemize}
 \item 对前期信息核验要求极高,一旦选错导师,调整空间有限。
 \item 缺少``试错期'',需要在入组前充分判断导师风格与组内生态。
 \end{itemize}
-\end{enumerate}
 \section{\label{ref-023}工具与策略(在实际情况下,可以借助万能的大模型)}
 
 \subsection{\label{ref-024}导师的联系}
@@ -899,7 +897,7 @@
 
 \item 涉及签字、盖章、人工审核的材料务必提前处理
 \end{itemize}
-\blocktitle{管理示例：}
+\blocktitle{管理示例}
 
 \begin{center}
 \includegraphics[width=\linewidth]{media/image9.png}\par\medskip
@@ -977,7 +975,8 @@
 \item 提到做过 WB / qPCR ${\rightarrow}$ 老师追问原理、流程与目的
 \item 提到对某位导师感兴趣 ${\rightarrow}$ 老师追问是否了解其代表性工作
 \end{itemize}
-\textbf{原则}：只暴露你\textbf{能够承接追问}的内容,避免``挖坑后无法填坑''。
+\blocktitle{原则}
+只暴露你\textbf{能够承接追问}的内容,避免``挖坑后无法填坑''。
 
 \subsubsection{回答问题的基本要求(比内容更重要)}
 
@@ -1428,6 +1427,7 @@
 
 \item \textbf{\textcolor{title-section}{中科院青岛生物能源与过程研究所}}
 
+\blocktitle{资料图片}
 \begin{center}
 \includegraphics[width=\linewidth]{media/image14.jpg}\par\medskip
 \includegraphics[width=\linewidth]{media/image15.jpg}
@@ -1435,11 +1435,11 @@
 
 \item \textbf{\textcolor{title-section}{天津工业生物技术研究所}}
 
-\blocktitle{简介：}
+\blocktitle{简介}
 
-中国科学院天津工业生物技术研究所是由中国科学院和天津市人民政府 共建、从事生物技术创新推动工业领域生态发展的科研机构。 其定位是：以生物设计为核心,开展工业生物技术战略性、前瞻性的基础与应用基础研究,集聚工业生物科技力量, 创新生物产业关键核心技术与重大颠覆性技术,构建工业经济发展的生 态路线,服务我国绿色生物经济与社会经济可持续的发展。
+中国科学院天津工业生物技术研究所是由中国科学院和天津市人民政府共建、从事生物技术创新推动工业领域生态发展的科研机构。其定位是：以生物设计为核心,开展工业生物技术战略性、前瞻性的基础与应用基础研究,集聚工业生物科技力量,创新生物产业关键核心技术与重大颠覆性技术,构建工业经济发展的生态路线,服务我国绿色生物经济与社会经济可持续的发展。
 
-\blocktitle{代表性工作：}
+\blocktitle{代表性工作}
 \begin{enumerate}
 \item 二氧化碳到淀粉的从头合成(Science,373,1523-1527(2021),被央视专门报道过)
 \item 将植物基因组装、编辑到啤酒酵母细胞中,构建出在啤酒发酵罐中制造植物物质的新路径,实现了人参、天麻、 红景天、灯盏花、玫瑰、香紫苏等近50种药用、经济植物有效组分的异源细胞合成。 
@@ -1448,8 +1448,6 @@
 \item 获得具有自主知识产权的高性能工业菌种,构建了氨基酸工业菌种定制研发技术体系,创建了赖氨酸、谷氨酸、 缬氨酸等多个自主知识产权菌株,多项技术实现工业应用
 \end{enumerate}
 \blocktitle{著名导师}
-
-
 \noindent\includegraphics[width=\linewidth]{media/image16.png}
 
 \end{enumerate}
@@ -1522,6 +1520,7 @@
 \end{itemize}
 \item \textbf{\textcolor{title-section}{复旦大学脑科学转化研究院}}
 
+\blocktitle{概况}
 \begin{itemize}
 \item 复旦新建,实验条件很好,占新楼 2 层整层
 \item 现阶段仍有 PI 未搬入,实验室较空
@@ -1565,11 +1564,12 @@
 \end{itemize}
 \item \textbf{\textcolor{title-section}{香港科技大学}}
 
+\blocktitle{基本信息}
 \begin{itemize}
 \item 香港科技大学(The Hong Kong University of Science and Technology)
 \item 2022 QS：34；香港地区：2,与内地复旦大学相当
 \item 非境外留学经历；不需要保研资格；类似海外申请
-\item 学费：4w/年;奖学金：1.5w/月(PhD) 1w/月(MPhi)
+\item 学费：4w/年；奖学金：1.5w/月(PhD)、1w/月(MPhi)
 \item 语言要求：雅思不低于 6.5(5.5)或托福不低于 8(原文如此,保留原表述)
 \end{itemize}
 \item \textbf{\textcolor{title-section}{西湖大学}}
@@ -1629,6 +1629,7 @@
 \end{itemize}
 \subsubsection{清华大学}
 
+\blocktitle{申请提醒}
 \begin{itemize}
 \item 夏令营申请阶段绩点权重很高
 \item 绩点过线后,科研经历与荣誉是加分项
@@ -1654,6 +1655,7 @@
 \end{itemize}
 \subsubsection{北京大学}
 
+\blocktitle{报名提醒}
 \begin{itemize}
 \item 报名系统较旧,且可能要求纸质材料提交
 \item 若错过纸质提交窗口可能导致无法报名
@@ -2008,7 +2010,8 @@
 \end{itemize}
 \chapter{\label{ref-054}第二篇｜考研}
 
-将在之后考虑版本更新
+\blocktitle{待更新}
+将在之后考虑版本更新。
 
 \chapter{\label{ref-055}致谢}
 
